Update with fly.dev